# algebraicdb

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  shell.nix
.github/workflows/: rust.yml
adbcat/: Cargo.toml
adbcat/src/: main.rs  tokenizer.rs
algebraicdb/: Cargo.toml  build.rs
algebraicdb/src/: ast.rs  client.rs  grammar.lalrpop  grammar.rs  lib.rs  main.rs  pattern.rs  pre_typechecker.rs  typechecker.rs  types.rs
algebraicdb/src/api/: config.rs  custom.rs  mod.rs  tcp_api.rs  uds_api.rs
algebraicdb/src/ast/: mod.rs  pattern.rs  span.rs
algebraicdb/src/executor/: mod.rs  wrapper.rs
algebraicdb/src/executor/dbms/: iter.rs  mod.rs
algebraicdb/src/local/: dbms_state.rs  mod.rs  tests.rs  types.rs  wrapper_state.rs
algebraicdb/src/page_tree/: mod.rs  page.rs
algebraicdb/src/persistence/: manager.rs  mod.rs  read.rs  wal.rs  write.rs
algebraicdb/src/psqlwrapper/: db_connection.rs  mod.rs
algebraicdb/src/psqlwrapper/translator/: create_table.rs  drop.rs  insert.rs  mod.rs  select.rs  tests.rs
algebraicdb/src/state/: dbms.rs  mod.rs  types.rs
algebraicdb/src/table/: cell.rs  iter.rs  mod.rs  row.rs  schema.rs
algebraicdb/src/util/: mod.rs  num_bytes.rs  timing.rs
algebraicdb/test_queries/1/: output
algebraicdb/test_queries/10/: output
algebraicdb/test_queries/11/: input  output
algebraicdb/test_queries/12/: input  output
algebraicdb/test_queries/2/: input  output
algebraicdb/test_queries/3/: input  output
algebraicdb/test_queries/4/: input  output
algebraicdb/test_queries/5/: output
algebraicdb/test_queries/6/: input  output
algebraicdb/test_queries/7/: output
algebraicdb/test_queries/8/: input  output
algebraicdb/test_queries/9/: input
benches/: .gitignore  Cargo.toml  executor_benchmark.rs  integration_tests_benchmark.rs  parsing_benchmark.rs  pgbench_benchmark.rs
benches/src/: lib.rs  runtime.rs
benches/src/tps/: mod.rs  simplebench.rs
channel_stream/: Cargo.toml
channel_stream/src/: lib.rs
src/: ast.rs  client.rs  error_message.rs  executor.rs  grammar.lalrpop  lib.rs  main.rs  my_grammar.lalrpop  my_grammar.rs  pattern.rs  pre_typechecker.rs  snapshot.rs  table.rs  typechecker.rs  types.rs  wal.rs
src/api/: config.rs  custom.rs  mod.rs  tcp_api.rs  tcpapi.rs
src/ast/: mod.rs  pattern.rs  span.rs
src/executor/: dbms.rs  mod.rs  wrapper.rs
src/executor/dbms/: iter.rs  mod.rs
src/global/: api.rs  manager.rs  mod.rs  tests.rs  types.rs
src/local/: dbms_state.rs  mod.rs  tests.rs  types.rs  wrapper_state.rs
src/persistence/: manager.rs  mod.rs  read.rs  wal.rs  write.rs
src/psqlwrapper/: mod.rs  translator.rs  wrapper.rs
src/psqlwrapper/translator/: create_table.rs  insert.rs  mod.rs  select.rs  tests.rs  translator.rs
src/snapshot/: manager.rs  mod.rs  read.rs  write.rs
src/table/: cell.rs  iter.rs  mod.rs  pattern_iter.rs  row.rs  schema.rs
src/util/: mod.rs  str.rs
test_queries/: 1output  README.md
test_queries/1/: input
test_queries/10/: input  output
test_queries/11/: input
test_queries/2/: input  output
test_queries/3/: input
test_queries/4/: input  output
test_queries/5/: input  output
test_queries/6/: output
test_queries/7/: input  output
test_queries/8/: input  output
tests/: test_example_queries.rs
