[package]
name = "algebraicdb"
version = "0.1.0"
authors = [
    "feffe <feffe@feffe.dev>",
    "Joakim Hulthe <joakim@hulthe.net>",
]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
rand = "0.7.3"
lalrpop-util = "0.17.2"
regex = "1.3.4"
smallvec = "1.2.0"
crossbeam = "0.7.3"
tokio = { version = "0.2.11", features = ["full"] }
tokio-util = {version = "0.2", features = ["udp", "codec"]}
futures = "0.3.4"
tokio-postgres = "0.5.2"
async-trait = "0.1.24"

[dev-dependencies]
prettydiff = "0.3.1"

[build-dependencies]
lalrpop = "0.17.2"

[features]
default = ["wrapper"]
wrapper = []
