[package]
name = "algebraicdb"
version = "0.1.0"
authors = [
    "feffe <feffe@feffe.dev>",
    "Joakim Hulthe <joakim@hulthe.net>",
    "Erik Johnsson <erik@erikjohnsson.se>",
]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[lib]
bench = false

[[bin]]
name = "algebraicdb"
path = "src/main.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
rand = "0.7.3"
lalrpop-util = "0.18.1"
regex = "1.3.4"
smallvec = "1.2.0"
tokio = { version = "0.2.16", features = ["full"] }
tokio-util = {version = "0.3", features = ["udp", "codec"]}
futures = "0.3.4"
async-trait = "0.1.30"
serde = "1.0.104"
seahash = "4.0.0"
structopt = "0.3.12"
lazy_static = "1.4.0"
pretty_env_logger = "0.4"
log = "0.4"

[build-dependencies.lalrpop]
version = "0.18.1"
features = ["lexer"]

[dev-dependencies]
prettydiff = "0.3.1"
crossbeam = "0.7.3"




